[Touchpad KCM] Fixed loading of wrong qml file

Summary:
On system settings, If Mouse KCM is opened first, then touchpad KCM loads the same Mouse QML file (qrc:/libinput/main.qml) instead of Touchpad Qml file.
Having same url (qrc:/libinput/main.qml).

Fix: simply renaming qml files fixed the issue.There could be better solutions though.

Also removed unused configProps from D21228.

BUG: 398228

Test Plan:
1. Renamed main.qml to touchpad.qml .
2. Edited resource file to reflect change.
3. When compiled with these changes and opened touchpad setting, it was all blank, which was expected (because i did not changed the source).But opening mouse and then
touchpad shows mouse settigs. So it Confirmed the cause.
4. Now changing source and compiling it fixes the issue. Now, no more mouse on Touchpad and vice-versa.

Reviewers: romangg, ngraham

Reviewed By: romangg

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D21269